[project]
name = "cashtag"
version = "0.1.0"
description = "MCP connector surfacing stocks with unusual social-media mention volume, with a bullish/bearish sentiment split."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.6",
    "anthropic>=0.40",
    "httpx>=0.27",
    "praw>=7.7",
    "sqlalchemy>=2.0",
    "apscheduler>=3.10",
    "uvicorn>=0.30",
    "starlette>=0.37",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]
postgres = ["psycopg[binary]>=3.1"]

[project.scripts]
cashtag-server = "cashtag.server:main"
cashtag-worker = "cashtag.worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cashtag"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
